* Screenshots und Metadaten für F-Droid hinzugefügt.
* Verhindere, dass der Bildschirm aus geht, während ein Stream läuft.
* Sender "Deutsche Welle Deutsch+" hinzugefügt
* Zuverlässigere Video-Wiedergabe für viele Sender.
* Verstecke Status-Bar nachdem die App pausiert wurde.