@@ -1,20 +1,0 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	tools:context="de.christinecoenen.code.zapp.upnp.DeviceDialog">
-
-	<ProgressBar
-		android:id="@+id/progress"
-		style="?android:attr/progressBarStyle"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_centerInParent="true" />
-
-	<android.support.v7.widget.ListViewCompat
-		android:id="@+id/list"
-		android:layout_width="match_parent"
-		android:layout_height="match_parent" />
-
-</RelativeLayout>
