@@ -1,3 +1,4 @@
+* RBB-Streams repariert.
 * Screenshots und Metadaten für F-Droid hinzugefügt.
 * Verhindere, dass der Bildschirm aus geht, während ein Stream läuft.
 * Sender "Deutsche Welle Deutsch+" hinzugefügt
